force-app/main/default/objects/AgriEdge_Shipment__c/AgriEdge_Shipment__c.object-meta.xml
<CustomObject>
    <description>Stores shipment tracking details for AgriEdge orders.</description>
    <label>AgriEdge Shipment</label>
    <nameField>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgriEdge Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>