force-app/main/default/objects/AgriEdge_Shipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>FedEx</fullName><default>false</default><label>FedEx</label></value>
            <value><fullName>UPS</fullName><default>false</default><label>UPS</label></value>
            <value><fullName>DHL</fullName><default>false</default><label>DHL</label></value>
            <value><fullName>Local Courier</fullName><default>true</default><label>Local Courier</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>