force-app/main/default/objects/AgriEdge_Shipment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>AgriEdge_Order__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>