force-app/main/default/objects/AgriEdge_Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>