force-app/main/default/objects/AgriEdge_Shipment__c/validationRules/Order_Status_Change_Restriction.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Requires tracking number before shipment is marked delivered when the related order is delivered.</description>
    <errorConditionFormula>AND( ISPICKVAL( Order__r.Order_Status__c , "Delivered" ), ISBLANK( Tracking_Number__c ) )</errorConditionFormula>
    <errorDisplayField>Tracking_Number__c</errorDisplayField>
    <errorMessage>Tracking Number is required before marking order as Delivered.</errorMessage>
</ValidationRule>